# ga-and-nsgaii

./: README.md
ga/: CMakeLists.txt  ga.ini
ga/ga/: CMakeLists.txt  assignment_problem.cpp  assignment_problem.h  crossover.cpp  ga.cpp  ga.h  gnuplot_interface.cpp  gnuplot_interface.h  intilization.cpp  log.cpp  main.cpp  math_aux.h  mutation.cpp  mutation.h  population.h  survivor_selection.cpp  survivor_selection.h
nsgaii/: CMakeLists.txt  nsgaii.ini
nsgaii/nsgaii/: CMakeLists.txt  assignment_problem.cpp  assignment_problem.h  base_problem.h  comparator.cpp  crossover.h  crowding_distance.cpp  crowding_distance.h  gnuplot_interface.cpp  individual.cpp  individual.h  initialization.h  intilization.cpp  log.cpp  log.h  main.cpp  math_aux.cpp  nondominated_sort.cpp  nondominated_sort.h  nsgaii.cpp  nsgaii.h  survivor_selection.cpp  survivor_selection.h
